--- a/package.json
+++ b/package.json
@@ -7,9 +7,14 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "proxy": "http://localhost:5000"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/material": "^7.3.4",
+    "@mui/x-data-grid": "^8.13.1",
     "@tailwindcss/vite": "^4.1.13",
     "amazon-cognito-identity-js": "^6.3.15",
     "amplify": "^0.0.11",
