--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "amazon-cognito-identity-js": "^6.3.15",
     "amplify": "^0.0.11",
     "buffer": "^6.0.3",
+    "face-api.js": "^0.22.2",
     "framer-motion": "^12.23.22",
     "jwt-decode": "^4.0.0",
     "react": "^19.1.1",
